--- a/package.json
+++ b/package.json
@@ -99,5 +99,9 @@
     "prettier-eslint-cli": "^5.0.0",
     "prompts": "^2.3.2",
     "yaml": "^1.10.0"
+  },
+
+  "engines": {
+    "node": "16.14.0"
   }
 }
